--- a/src/app/stock/movements/create-movement.component.html
+++ b/src/app/stock/movements/create-movement.component.html
@@ -90,6 +90,7 @@
                 <span class="p-column-title">Nombre:</span>{{ product.product.name }}
             </td>
             <td pEditableColumn>
+                <span class="p-column-title">Cantidad:</span>
                 <p-cellEditor>
                     <ng-template pTemplate="input">
                         <p-inputNumber inputId="quantity"
