--- a/src/app/stock/products/products.component.html
+++ b/src/app/stock/products/products.component.html
@@ -65,7 +65,7 @@
             </div>
         </div> 
         <button icon="pi pi-check" pButton type="submit" 
-                class="p-button-text" label="Guardar"></button>           
+                class="p-button-text" label="Guardar" [loading]="loadingButton"></button>           
     </form>
 </p-dialog>
 
