--- a/src/app/stock/offices/offices.component.html
+++ b/src/app/stock/offices/offices.component.html
@@ -49,7 +49,7 @@
             </div>
         </div>
         <button icon="pi pi-check" pButton type="submit" 
-            class="p-button-text" label="Guardar"></button>
+            class="p-button-text" label="Guardar" [loading]="loadingButton"></button>
     </form>
 </p-dialog>
 
